Fixed: wflow-consoleweb - List Builder - Long column name is not wrap in palette. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/builder/builder.css
+++ b/wflow-consoleweb/src/main/webapp/builder/builder.css
@@ -756,6 +756,7 @@ body.right-panel-resizing #right-panel-resize-block{
     display: table-cell;
     vertical-align: middle;
     text-align: left;
+    overflow-wrap: anywhere;
 }
 .drag-elements-sidepane ul > li ol li[data-type] {
     border: none;
